--- a/style.css
+++ b/style.css
@@ -49,12 +49,12 @@ th, td {
 }
 
 body {
-  background-image: url('starbg.jpeg');
+  background-image: url('images/starbg.jpeg');
 }
 
 h1 {
   font-family: Lato;
-  color: #EEE352;
+  color: goldenrod;
   text-align: center;
 }
 
@@ -70,7 +70,7 @@ h1 {
 
 h2 {
   font-family: Lato;
-  color: #EEE352;
+  color: goldenrod;
   text-align: center;
   margin-bottom: 10px;
 }
@@ -92,10 +92,17 @@ button {
 }
 
 .numbers {
-  color: #EEE352;
+  color: goldenrod;
   font-size: xx-large;
   text-align: right;
   padding: 10px;
-
 }
 
+.actionButton {
+  color: goldenrod;
+  font-family: Lato;
+  border-color: goldenrod;
+  background-color: black;
+  font-size: 16px;
+  margin-right: 10px;
+}
